scrollbar fix; merge

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-html, body {
+body {
   overflow: scroll;
   margin: 10;
   font-size: 14px;
